Adding Activity History && Stats and more fix !
