# TunicartUI/src/app/services/models/activity-history.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ActivityHistory {
+  actionType?: string;
+  id?: number;
+  productId?: number;
+  timestamp?: string;
+  userId?: number;
+}
