# TunicartUI/src/app/services/models/detailed-system-stats.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface DetailedSystemStats {
+  activeUsers?: number;
+  averageOrderValue?: number;
+  averageRating?: number;
+  newUsers?: number;
+  orderStatusCount?: {
+[key: string]: number;
+};
+  totalOrders?: number;
+  totalSales?: number;
+  totalUsers?: number;
+}
