# TunisiCart/src/main/java/com/AeiselDev/TunisiCart/controllers/PublicController.java
@@ -1,8 +1,10 @@
 package com.AeiselDev.TunisiCart.controllers;
 
 import com.AeiselDev.TunisiCart.common.ItemRequest;
+import com.AeiselDev.TunisiCart.entities.ActivityHistory;
 import com.AeiselDev.TunisiCart.entities.Item;
 import com.AeiselDev.TunisiCart.entities.User;
+import com.AeiselDev.TunisiCart.repositories.ActivityHistoryRepository;
 import com.AeiselDev.TunisiCart.services.AdminService;
 import com.AeiselDev.TunisiCart.services.ItemService;
 import com.AeiselDev.TunisiCart.services.PublicService;
@@ -13,6 +15,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -23,8 +26,9 @@ import java.util.Optional;
 public class PublicController {
 
     private final ItemService itemService;
-    private final AdminService adminService;
     private final PublicService publicService;
+
+    private final ActivityHistoryRepository activityHistoryRepository;
 
     @GetMapping("/items")
     public ResponseEntity<List<Item>> getAllItems() {
@@ -35,7 +39,17 @@ public class PublicController {
     @GetMapping("items/{id}")
     public ResponseEntity<Item> getItemById(@PathVariable Long id) {
         Optional<Item> item = itemService.getItemById(id);
-        return item.map(ResponseEntity::ok)
+        if (item.isPresent()) {
+            // Record the view activity
+            ActivityHistory activity = new ActivityHistory();
+            activity.setProductId(id);
+            activity.setActionType("view");
+            // Optionally set timestamp if not handled by @PrePersist
+            activity.setTimestamp(LocalDateTime.now());
+
+            activityHistoryRepository.save(activity);
+        }
+        return item.map(ResponseEntity::ok )
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
